--- a/Assignment2/HW2.tex
+++ b/Assignment2/HW2.tex
@@ -208,6 +208,8 @@ x, such that (x mod 4) == 1. (1, 5, 9, 13, etc). Leading zeroes are ok
   (5 point) Show that every finite language is regular.
 \end{fancyquotes}
 
+{\Huge TODO}
+
 % \subsection{} % (fold)
 % \begin{fancyquotes}
 %   (2 points) Give a directed graph representation of $R$ for the set $S=\{a,b,c\}$.
