--- a/Assignment3/HW3.tex
+++ b/Assignment3/HW3.tex
@@ -139,30 +139,56 @@
     of $a$'s
   \end{fancyquotes}
 
-  % \begin{figure}[hp]
-  %   \centering
-  %   \includegraphics[width=1.0\textwidth]{3-1}
-  %   \caption{The finite language $L=\{aba,bba,aab\}$}
-  % \end{figure}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{1-1}
+    \caption{All strings over $\{a, b, c\}$ that contain an even
+      number of $a$'s}
+  \end{figure}
 
 \item
   \begin{fancyquotes}
     (4 points)All strings over $\{a, b, c\}$ that contain an even
     number of $a$'s and an even number of $b$'s
   \end{fancyquotes}
+
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{1-2}
+    \caption{All strings over $\{a, b, c\}$ that contain an even number of $a$'s and an even number of $b$'s}
+  \end{figure}
+
 \item
   \begin{fancyquotes}
     (4 points) All strings over $\{a,b\}$ that contain either $aab$ or $bba$
     (or both)
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{1-3}
+    \caption{All strings over $\{a,b\}$ that contain either $aab$ or $bba$ (or both)}
+  \end{figure}
+
 \item
   \begin{fancyquotes}
     (4 points) All strings over $\{a,b\}$ that contain both $aab$ and $bba$
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{1-4}
+    \caption{All strings over $\{a,b\}$ that contain both $aab$ and $bba$}
+  \end{figure}
+
 \item
   \begin{fancyquotes}
     (4 points) All strings over $\{a,b\}$ that contain $aab$ but not $bba$
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{1-5}
+    \caption{All strings over $\{a,b\}$ that contain $aab$ but not $bba$}
+  \end{figure}
+
 \end{enumerate}
 
 
