--- a/Assignment3/HW3.tex
+++ b/Assignment3/HW3.tex
@@ -27,6 +27,7 @@
 \usepackage[english]{babel} % English language/hyphenation
 \usepackage{amsmath,amsfonts,amsthm,amssymb} % Math packages
 \usepackage{graphicx}
+\usepackage{float} % Use [H] to force figure not float
 
 \usepackage{sectsty} % Allows customizing section commands
 \allsectionsfont{\centering \normalfont\scshape} % Make all sections centered, the default font and small caps
@@ -208,11 +209,23 @@
     whose second symbol does not appear elsewhere in the string. So
     $bdabc, acbab, bacbd, abcdc \in L$, while $aa, bcabc, abcbc, dd \notin L$
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=.5\textwidth]{HW3-2.gv.png}
+    \caption{All strings over $\{a,b\}$ that contain $aab$ but not $bba$}
+  \end{figure}
+
 \item
   \begin{fancyquotes}
     (4 points) L = All strings over $\{a, b, c\}$ such that every $a$ is
     followed by either the substring $bcb$ or $ccb$
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=1.0\textwidth]{HW3-2.gv.2.png}
+    \caption{All strings over $\{a,b\}$ that contain $aab$ but not $bba$}
+  \end{figure}
+
 \end{enumerate}
 
 
@@ -237,12 +250,23 @@
     diagram, it does tend to get a little messy with a larger
     alphabet.
   \end{fancyquotes}
+  {\Huge TODO}
+  % \begin{figure}[hp]
+  %   \centering
+  %   \includegraphics[width=\textwidth]{HW3-3.gv.png}
+  %   \caption{All strings over $\{a,b\}$ that contain $aab$ but not $bba$}
+  % \end{figure}
 
 \item
   \begin{fancyquotes}
     (4 points) All strings over $\{a, b, c\}$ that contain an even number
     of a's and an even number of b's and an even number of c's.
   \end{fancyquotes}
+  \begin{figure}[hp]
+    \centering
+    \includegraphics[width=\textwidth]{HW3-3.gv.2.png}
+    \caption{All strings over $\{a,b\}$ that contain $aab$ but not $bba$}
+  \end{figure}
 
 \end{enumerate}
 
