--- a/Assignment5/HW5.tex
+++ b/Assignment5/HW5.tex
@@ -24,7 +24,7 @@
     (8 points) $\{a^nb^{3n} : n>0\}$
   \end{fancyquotes}
 
-  $$S\rightarrow aSbbb \mid \epsilon$$
+  $$S\rightarrow aSbbb \mid abbb$$
 
   \begin{figure}[H]
     \centering
@@ -68,7 +68,7 @@
     3, -, /.
   \end{fancyquotes}
 
-  $$S\rightarrow OSS \mid ONN \mid N$$
+  $$S\rightarrow OSS \mid N$$
   $$O\rightarrow - \mid /$$
   $$N\rightarrow 1 \mid 2 \mid 3$$
 
