--- a/usfassignment.sty
+++ b/usfassignment.sty
@@ -6,9 +6,17 @@
 \usepackage{amsmath,amsfonts,amsthm,amssymb} % Math packages
 \usepackage{graphicx}
 \usepackage{float} % Use [H] to force figure not float
+\usepackage[section]{placeins} % prevent figures to appear in another section
 
 \usepackage{sectsty} % Allows customizing section commands
 \allsectionsfont{\centering \normalfont\scshape} % Make all sections centered, the default font and small caps
+
+% Font Setting
+\usepackage{fontspec}
+%\setmainfont{Times New Roman}
+\setmainfont{STIXGeneral}
+\setsansfont{Arial}
+\setmonofont{Courier New}
 
 % -----------------------------------------------------------------------------
 % TITLE SECTION
