--- a/Assignment7/HW7.tex
+++ b/Assignment7/HW7.tex
@@ -62,8 +62,14 @@
   $$AT_a \rightarrow T_aa$$
   $$T_a | T_d \rightarrow \epsilon$$
 
-\item $L = \{a^{2n} : n\geq 0\}$.
-  $$S \rightarrow aaS | \epsilon$$
+\item $L = \{a^{2^{n}} : n\geq 0\}$.
+  $$S \rightarrow BAE$$
+  $$E \rightarrow TE$$
+  $$AT \rightarrow TAA$$
+  $$BT \rightarrow B$$
+  $$A \rightarrow a$$
+  $$B \rightarrow \epsilon$$
+  $$E \rightarrow \epsilon$$
 
 \item $L = \{a^{n^{2}} : n\geq 0\}$
   $$S \rightarrow BTE$$
