disable custom fonts

--- a/usfassignment.sty
+++ b/usfassignment.sty
@@ -12,11 +12,11 @@
 \allsectionsfont{\centering \normalfont\scshape} % Make all sections centered, the default font and small caps
 
 % Font Setting
-\usepackage{fontspec}
-%\setmainfont{Times New Roman}
-\setmainfont{STIXGeneral}
-\setsansfont{Arial}
-\setmonofont{Courier New}
+% \usepackage{fontspec}
+% \setmainfont{Times New Roman}
+% \setmainfont{STIXGeneral}
+% \setsansfont{Arial}
+% \setmonofont{Courier New}
 
 % -----------------------------------------------------------------------------
 % TITLE SECTION
