--- a/usfassignment.sty
+++ b/usfassignment.sty
@@ -7,9 +7,11 @@
 \usepackage{graphicx}
 \usepackage{float} % Use [H] to force figure not float
 \usepackage[section]{placeins} % prevent figures to appear in another section
+\usepackage[vlined,lined,boxed,commentsnumbered]{algorithm2e}
 
 \usepackage{sectsty} % Allows customizing section commands
 \allsectionsfont{\centering \normalfont\scshape} % Make all sections centered, the default font and small caps
+%\setlength\parindent{0pt} % Removes all indentation from paragraphs - comment this line for an assignment with lots of text
 
 % Font Setting
 % \usepackage{fontspec}
@@ -117,7 +119,5 @@
 \numberwithin{equation}{section} % Number equations within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
 \numberwithin{figure}{section} % Number figures within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
 \numberwithin{table}{section} % Number tables within sections (i.e. 1.1, 1.2, 2.1, 2.2 instead of 1, 2, 3, 4)
-
-\setlength\parindent{0pt} % Removes all indentation from paragraphs - comment this line for an assignment with lots of text
 
 \endinput
